# dapp

./: .babelrc.json  .dockerignore  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .graphqlconfig  .lycheeignore  .nxignore  .prettierignore  .prettierrc  .prettierrc.yml  .windsurfrules  .yarnrc  .yarnrc.yml  1004.07a1caea.iframe.bundle.js  1004.856be664.iframe.bundle.js  1004.9a1de748.iframe.bundle.js  1004.c50c135f.iframe.bundle.js  1006.6f391fab.iframe.bundle.js  1010.5b5cd6c8.iframe.bundle.js  1041.08a984ef.iframe.bundle.js  1054.f5dfdf2c.iframe.bundle.js  1055.703256bb.iframe.bundle.js  106.07c4320a.iframe.bundle.js  106.eb0cff0a.iframe.bundle.js  1067.9e8c63d9.iframe.bundle.js  1067.e2efb890.iframe.bundle.js  1067.fa333960.iframe.bundle.js  1067.fbe8fff7.iframe.bundle.js  1071.49dabe84.iframe.bundle.js  1071.c790e347.iframe.bundle.js  108.b7608206.iframe.bundle.js  108.e5ed3158a7f0fc15f294.manager.bundle.js  1082.2e853f4f.iframe.bundle.js  1088.87c4ff30.iframe.bundle.js  1088.8806e7ae.iframe.bundle.js  111.62f63de3.iframe.bundle.js  1127.7f7e6e61.iframe.bundle.js  (+2672 more)
.agent-memory/: hints.json  traj_1777060627586_lns196.json  traj_1777094410101_9hzi89.json  traj_1777107372734_o2b2fj.json  traj_1782341444609_7f4kan.json  traj_1782341532031_njyzi3.json  traj_1782341588789_ytylao.json  traj_1782341649403_580rwk.json  traj_1782341717229_a2t8vq.json  traj_1782341769641_yhtwvk.json  traj_1782341836169_d39lmr.json  traj_1782341904859_fso4vy.json  traj_1782341974809_z5rprr.json  traj_1782343284118_mdd8lp.json  traj_1782343346545_1w6yxn.json  traj_1782343401350_9h6w7d.json  traj_1782343460933_nct7g1.json  traj_1782343524083_l0ksaw.json  traj_1782344073837_8nzdhb.json  traj_1782344695630_h30bg6.json  traj_1782345297608_c532c3.json  traj_1782346052849_xs7h0u.json  traj_1782348399544_6yxbus.json  traj_1782349136608_xbaz9k.json  traj_1782394038098_p52ot3.json
.claude/: review-lessons.md
.cursor/: mcp.json
.evolve/: tangle-cloud-design-audit-2026-06-05.md  tangle-cloud-design-audit-2026-06-07.md  tangle-cloud-design-audit-2026-06-08.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit  pre-push
.storybook/: main.js  main.ts
__mocks__/: svg.js  svgUrl.js
assets/: Accordion.stories-CGa1rGHT.js  AccordionItem-KJTGqcId.js  AccountDropdownBody-BtkIwlri.js  AddressChip-DtrHZX5v.js  AddressChip.stories-CIPBIaRB.js  AdjustAmount-DHVlfxUU.js  AdjustAmount.stories-BekcQENs.js  Alert-CUeVEtwL.js  Alert-gGoSOTPY.js  Alert.stories-D0A2l1Gd.js  Avatar-BFvCMqwp.js  Avatar.stories-DqdK_VLA.js  AvatarGroup-DsvZr1cS.js  AvatarGroup.stories-CXmMVgOw.js  BottomDialog.stories-TZGtxc01.js  BottomDialogPortal-m_Pfj3V2.js  Breadcrumbs.stories-BVbF6oVl.js  BreadcrumbsItem-B-I6t6WQ.js  BreadcrumbsItem.stories-BeUja3zL.js  Button-bTMyXnUe.js  Button.stories-mY6uiH-3.js  Card-BUAPMoyk.js  Card.stories-wFrCcUBZ.js  ChainChip-CLA7S5MZ.js  ChainChip.stories-CsPEpuSP.js  ChainIcon-MpKHrVma.js  ChainIcon.stories-DyD-kxFy.js  ChainId-BdsD6Wmj.js  ChainListCard-MwzE6EOy.js  ChainListCard.stories-BTx7F24A.js  ChainOrTokenButton-B3p2-KpI.js  ChainOrTokenButton.stories-B432oedS.js  ChainsRing-DwS8XOef.js  ChainsRing.stories-BouFRsxp.js  ChartContainer.stories-CyuCIM5o.js  Checkbox-CLfCyBur.js  Checkbox.stories-Cn8H318v.js  Chip-CU1xpYxs.js  Chip.stories-GqaBKYzw.js  CodeFile-B_DLVtVY.js  (+249 more)
components/: BackgroundGlassEffect.d.ts  Caption.d.ts  CircularProgress.d.ts  ListStatus.d.ts  Suspense.d.ts
constants/: index.d.ts  networks.d.ts  tangleDocs.d.ts
contracts/migration-claim/sp1/: Cargo.toml  README.md
contracts/migration-claim/sp1/lib/: Cargo.toml
contracts/migration-claim/sp1/lib/src/: lib.rs
contracts/migration-claim/sp1/program/: Cargo.toml
contracts/migration-claim/sp1/program/src/: main.rs
contracts/migration-claim/sp1/script/: Cargo.toml  build.rs
contracts/migration-claim/sp1/script/src/: main.rs  vkey.rs
docker/: Dockerfile.dev
docs/: TANGLE_CLOUD_CONTRACT_PARITY.md  TNT_CORE_CONTRACT_UPDATES.md  V2_MIGRATION_PARITY.md  app-state-audit-2026-03-05.md  blueprint-app-store-program-plan.md  flow-validation-report.md  harness-engineering-checklist.md  harness-engineering-spec.md  launch-readiness-board.csv  launch-readiness-board.md  staking-flow-audit-checklist.md  user-stories-validation-catalog.csv  user-stories-validation-catalog.md  wallet-flow-suite.md
hooks/: useBreakpointValue.d.ts  useCopyable.d.ts  useDarkMode.d.ts  useHiddenValue.d.ts  useIsBreakpoint.d.ts  useIsMobile.d.ts  useIsMountedRef.d.ts  (+6 more)
(+7287 files in other folders)
