[workspace]
members = ["program", "script", "lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# SP1 dependencies - use v4 with succinct toolchain patches
sp1-zkvm = "4.0"
sp1-sdk = "4.0"
sp1-helper = "4.0"

# Cryptography - disable default features to avoid getrandom/std pulling in networking
schnorrkel = { version = "0.11", default-features = false, features = ["alloc"] }
merlin = { version = "3", default-features = false }

# Serialization - pin serde to avoid __private removal in 1.0.218+
serde = { version = ">=1.0,<1.0.218", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Ethereum - use versions without std networking deps
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }

# Common
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Patches for zkVM compatibility
[patch.crates-io]
# Use succinct's patched crates for zkVM support
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.8" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3" }
