[workspace]
members = ["program", "script", "lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# SP1 dependencies
sp1-zkvm = "4.0"
sp1-sdk = "4.0"
sp1-helper = "4.0"

# Cryptography
schnorrkel = { version = "0.11", default-features = false }
merlin = { version = "3", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Ethereum
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# Common
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
