[package]
name = "sr25519-claim-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-big-array = "0.5"
# Use no_std compatible features for zkVM
alloy-primitives = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }

# SS58 address decoding
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }

[dev-dependencies]
bincode = { workspace = true }
